# frankengraphdb

./: .gitignore  COMPREHENSIVE_PLAN_FOR_THE_DESIGN_OF_FRANKENGRAPHDB.md  COMPREHENSIVE_PLAN_REVIEW_BY_KIMI_K3.md  Cargo.toml  META_ANALYSIS_OF_KIMI_K3_REVIEW_BY_FABLE.md  PLAN_AUDIT_BY_SOL_ULTRA.md  README.md
crates/fgdb-bigint/: Cargo.toml
crates/fgdb-bigint/src/: lib.rs
crates/fgdb-claim/: Cargo.toml
crates/fgdb-claim/src/: lib.rs
crates/fgdb-codec/: Cargo.toml
crates/fgdb-codec/examples/: codec_pipeline_scalar_e2e.rs  scalar_transcript.rs
crates/fgdb-codec/src/: bitpack.rs  block.rs  delta_varint.rs  elias_fano.rs  evidence.rs  identity.rs  kernel.rs  lib.rs  neighbor.rs  roaring.rs
crates/fgdb-collections/src/: art.rs  hash_table.rs  levenshtein.rs  lib.rs  probe.rs  succinct.rs
crates/fgdb-delta-types/: Cargo.toml
crates/fgdb-delta-types/examples/: foundation_transcript.rs
crates/fgdb-delta-types/src/: lib.rs  zweight.rs
crates/fgdb-evidence/src/: lib.rs
crates/fgdb-resource/: Cargo.toml
crates/fgdb-resource/src/: ledger.rs  lib.rs
crates/fgdb-sketch/: Cargo.toml
crates/fgdb-sketch/src/: bottom_k.rs  count_min.rs  degree_histogram.rs  distinct.rs  exact_quantiles.rs  lib.rs  maintenance_log.rs  zone_map.rs
crates/fgdb-types/: Cargo.toml
crates/fgdb-types/src/: bytes.rs  context.rs  ids.rs  lib.rs  refs.rs  scalar.rs
registries/: appendix_a_catalog.toml  architecture_decisions.toml  bootstrap_frames.toml  checker_index.toml  durable_fields.toml  invariants.toml  logical_object_kinds.toml  physical_record_kinds.toml  prebootstrap_artifact_kinds.toml  wire_types.toml
scripts/: check.sh  g0_architecture_decisions_e2e.sh  g0_identity_e2e.sh  g0_spine_e2e.sh  w1_bigint_e2e.sh  w1_codec_pipeline_scalar_e2e.sh  w1_codec_scalar_e2e.sh  w1_foundation_types_e2e.sh
tools/registry-check/src/: appendix_a.rs  appendix_reference.rs  appendix_source.rs  architecture.rs  hash.rs  identity.rs  lib.rs  main.rs  model.rs
tools/registry-check/tests/: architecture_decisions.rs  identity.rs  spine.rs
