[package]
name = "fgdb-bigint"
version = "0.0.1"
edition.workspace = true
description = "Canonical signed-limb exact integers: the unique-representation integer domain FrankenGraphDB's Z-set weights promote into (plan §9.1, bead fgdb-w1-foundation-types-tjk)."
publish = false

[lints]
workspace = true
