[package]
name = "fgdb-codec"
version = "0.0.1"
edition = "2024"
description = "Safe scalar compression kernels for FrankenGraphDB's registered durable codec layer."
publish = false

[lints]
workspace = true

[dependencies]
fgdb-types = { path = "../fgdb-types" }

[dev-dependencies]
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync", rev = "e464a484cb65c1a55be0d9c925e6e9c20318edcb", default-features = false }
fnx-generators = { git = "https://github.com/Dicklesworthstone/franken_networkx.git", rev = "9d710b1c33e99412c94de7fa4de2f7ce4954110f" }
