[package]
name = "fgdb-delta-types"
version = "0.0.1"
edition = "2024"
description = "The G0/W2 logical delta schema: exact typed delta rows, the sequence-neutral LogicalDeltaTemplate, and the type-level law that only a committed MarkerRef orders a LogicalDeltaBatch (Appendix B ~plan:2807; bead fgdb-w1-foundation-types-tjk)."
publish = false

[dependencies.fgdb-types]
path = "../fgdb-types"

[dependencies.fgdb-bigint]
path = "../fgdb-bigint"

[dev-dependencies.fgdb-claim]
path = "../fgdb-claim"

[dev-dependencies.fgdb-evidence]
path = "../fgdb-evidence"

[dev-dependencies.fgdb-resource]
path = "../fgdb-resource"

[dev-dependencies.asupersync]
git = "https://github.com/Dicklesworthstone/asupersync"
rev = "e464a484cb65c1a55be0d9c925e6e9c20318edcb"
default-features = false

[lints]
workspace = true
