[package]
name = "fgdb-sketch"
version = "0.0.1"
edition = "2024"
description = "Deterministic graph-statistics sketches for FrankenGraphDB."
publish = false

[lints]
workspace = true

[dependencies]
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync", rev = "e464a484cb65c1a55be0d9c925e6e9c20318edcb", default-features = false }
fgdb-collections = { path = "../fgdb-collections" }
fgdb-types = { path = "../fgdb-types" }
