[package]
name = "fgdb-types"
version = "0.0.1"
edition = "2024"
description = "Core identity newtypes, bounded bytes, the typed reference family, and the canonical scalar value union (plan §8.6, Appendix A reference semantics; bead fgdb-w1-foundation-types-tjk)."
publish = false

[lints]
workspace = true

[dependencies]
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync", rev = "e464a484cb65c1a55be0d9c925e6e9c20318edcb", default-features = false }
